Mise en place du compteur & fonctionnalité de suppression de message

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="row">
+        Messages total: <span id="count">0</span>
+    </div>
+    <div class="row">
         <img class="avatar" src="avatar-1.jpg">
         <div>
             <h6>Noel Paganelli</h6>
@@ -49,6 +52,6 @@
         </div>
         <img class="trash" src="trash.png">
     </div>
-   
+    <script src="script.js"></script>
 </body>
 </html>
