Mise en place d’un champs de saisie pour rédiger un message

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         Messages total: <span id="count">0</span>
     </div>
     <div class="row">
+        <input id="add-message" type="text" placeholder="new message">
+        <button type="button" id="btn-add">Add</button> 
+    </div>
+    <div class="row">
         <img class="avatar" src="avatar-1.jpg">
         <div>
             <h6>Noel Paganelli</h6>
