--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
     <title>My Mails</title>
 </head>
 <body>
     <div class="row">
         Messages total: <span id="count">0</span>
+        <input id="search-message" type="text" placeholder="search message">
+        <button type="button" id="btn-search">Search</button>
     </div>
     <div class="row">
         <input id="add-message" type="text" placeholder="new message">
